# soa-vec

./: Cargo.toml  README.md
src/: lib.rs
