[package]
name = "soa-vec"
version = "0.1.0"
authors = ["Zac <that3percent@gmail.com>"]
edition = "2018"
description = "A simple Vec-like API over a struct of arrays layout."
homepage = "http://www.that3percent.com/soa-vec"
repository = "https://github.com/That3Percent/soa-vec"
readme = "README.md"
keywords = ["struct-of-arrays", "soa", "vec"]
categories = ["data-structures", "memory-management"]
license = "MIT"

[dependencies]
