[package]
name = "soa-vec"
version = "0.4.0"
authors = ["Zac Burns <that3percent@gmail.com>"]
edition = "2018"
description = "A simple Vec-like API over a struct of arrays layout."
homepage = "https://github.com/That3Percent/soa-vec"
repository = "https://github.com/That3Percent/soa-vec"
readme = "README.md"
keywords = ["struct-of-arrays", "soa", "vec"]
categories = ["data-structures", "memory-management"]
license = "MIT"

[dependencies]

[dependencies.second-stack]
version = "0.2.0"
features = ["experimental"]

[dev-dependencies]
testdrop = "0.1.2"